# primenick

./: .dockerignore  .env.example  .env.railway.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json
alembic/: env.py
alembic/versions/: 0001_initial.py
app/api/: middlewares.py  webhooks.py
app/bot/: keyboards.py  main.py
app/bot/handlers/: __init__.py  dashboard.py  generate.py  start.py
app/bot/middlewares/: security.py
app/core/: celery_app.py  logging.py  settings.py
app/db/: base.py  redis.py  session.py
app/models/: __init__.py  abuse.py  audit.py  enums.py  payment.py  quota.py  rate_limit.py  user.py  username.py
app/monitoring/: metrics.py
app/repositories/: users.py
app/security/: abuse.py  fingerprint.py  hash.py  jwt.py  proxy.py  rate_limiter.py  signatures.py
app/services/: availability.py  circuit_breaker.py  generation.py  payments.py  pricing.py  proxy_pool.py  quota.py  rarity.py  reservation.py
app/workers/: tasks.py
infra/fail2ban/: jail.local  nginx-rarehandle.conf
infra/grafana/provisioning/dashboards/: dashboard.yml  rarehandle.json
infra/nginx/: nginx.conf
infra/nginx/conf.d/: bot.conf
infra/postgres/: init.sql  postgresql.conf
infra/prometheus/: prometheus.yml
infra/redis/: redis.conf
scripts/: backup_postgres.sh  deploy.sh  railway_entrypoint.sh  robokassa_verify_signature.py
tests/: test_rarity_pricing.py
